Fix grammar with planning process

--- a/development/dev/create/code-review/backend/index.html.md.erb
+++ b/development/dev/create/code-review/backend/index.html.md.erb
@@ -112,8 +112,8 @@ To assign weights to issues in a future milestone, on every 4th of the developme
 1. See if there is already a discussed backend solution/plan or none yet.
 1. If the discussed backend solution/plan isn't that clear, clarify it.
 1. If there's no solution/plan yet, devise one. Doesn't need to be a detailed solution/plan. Feel free to ask other people to pick their brains.
-1. If there's a need to collaborate with stable counterpart to devise a solution/plan, add a comment and tag relevant counterparts.
-1. Give issue a weight if there's none yet or update if the existing weight isn't appropriate anymore. Leave a comment why a certain weight is given.
+1. If there's a need to collaborate with a stable counterpart to devise a solution/plan, add a comment and tag relevant counterparts.
+1. Give the issue a weight if there's none yet or update if the existing weight isn't appropriate anymore. Leave a comment about why a certain weight is given.
 1. It's strongly encouraged to spend no more than 2 hours per issue. Give it your best guess and move on if you run out of time.
 1. Label the issue as ~"workflow::ready for development".
 1. Unassign yourself or keep it assigned if you want to work on the issue.
