Update PLT rotation for GC.

--- a/product/product-leadership/index.html.md.erb
+++ b/product/product-leadership/index.html.md.erb
@@ -64,12 +64,12 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2023-02-28 | Jackie Porter (Ops) | TBD |
 | 2023-03-22 | Hillary Benson (Sec) | TBD |
 | 2023-04-13 | Joshua Lambert (Enablement) | TBD |
-| 2023-05-23 | Omar Fernandez (Fulfillment) | TBD |
+| 2023-05-23 | Justin Farris (Product Monetization) | TBD |
 | 2023-06-20 | Orit Golowinski (Dev) | TBD |
 | 2023-07-12 | Jackie Porter (Ops) | TBD |
 | 2023-08-23 | Hillary Benson (Sec) | TBD |
 | 2023-09-21 | Joshua Lambert (Enablement)| TBD |
-| 2023-10-11 | Omar Fernandez (Fulfillment) | TBD |
+| 2023-10-11 | Justin Farris (Product Monetization) | TBD |
 | 2023-11-09 | Orit Golowinski (Dev) | TBD |
 | 2023-12-13 | Jackie Porter (Ops)| TBD |
 
