Add Product ACR timeline

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -2960,6 +2960,17 @@ Below is an overview of our calibration structure and timeline for the FY'23 Q4 
 | Session 4 | VP, Product; VP, UX; PBP | Product division Directors | Week of November 14 | 1.5 hours |
 | Session 5 | VP, Product and PBP | All of the VP, Product's direct reports + finalize division-wide | November 28 | 1.5 hours | 
 
+### Annual Compensation Review
+
+The SSOT timeline for the upcoming Annual Compensation Review can be found [here](https://about.gitlab.com/handbook/total-rewards/compensation/compensation-review-cycle/#january). Below you will find additional dates specific to the Product division to ensure all levels have time to review as we move through the process.
+
+- January 9-13 @ 5pm PT - Manager/GMP level finalizes comp recommendations
+- January 16-17 @ 5pm PT - Sr Mgr (or next level up if no Sr Mgr) finalize comp recommendations
+- January 18-19 @ 5pm PT - CEO Skips (excluding VP) finalize comp recommendations
+- January 20-23 @ 5pm PT - VP finalize comp recommendations
+- January 25-26 @ 5pm PT: E-Group review and approve
+
+
 ### Span of Control Guidance
 
 We have added high level span of control guidance to our [Product leadership job families](https://about.gitlab.com/job-families/product/product-management-leadership/).
