Update Incident Management DRI for Holiday Coverage

--- a/quality/quality-engineering/oncall-rotation/index.html.md.erb
+++ b/quality/quality-engineering/oncall-rotation/index.html.md.erb
@@ -93,26 +93,27 @@ August 2022 - December 2022
 
 | **Start Date** | **DRI**           |
 |----------------|-------------------|
-| 2022-08-15     | Vincy Wilson      |
-| 2022-08-22     | Joanna Shih       |
-| 2022-08-29     | Ramya Authappan   |
-| 2022-09-05     | Vincy Wilson      |
-| 2022-09-12     | Joanna Shih       |
-| 2022-09-19     | Ramya Authappan   |
-| 2022-09-26     | Vincy Wilson      |
-| 2022-10-03     | Joanna Shih       |
-| 2022-10-10     | Ramya Authappan   |
-| 2022-10-17     | Vincy Wilson      |
-| 2022-10-24     | Joanna Shih       |
-| 2022-10-31     | Ramya Authappan   |
-| 2022-11-07     | Vincy Wilson      |
-| 2022-11-14     | Joanna Shih       |
-| 2022-11-21     | Ramya Authappan   |
 | 2022-11-28     | Kassandra Svoboda |
 | 2022-12-05     | Vincy Wilson      |
 | 2022-12-12     | Joanna Shih       |
 | 2022-12-19     | Ramya Authappan   |
-| 2022-12-26     | Kassandra Svoboda |
+| 2022-12-26     | Ramya Authappan   |
 | 2023-01-02     | Chloe Liu         |
+| 2023-01-09     | Kassandra Svoboda |
+| 2023-01-16     | Vincy Wilson      |
+| 2023-01-23     | Joanna Shih       |
+| 2023-01-30     | Ramya Authappan   |
+| 2023-02-06     | Chloe Liu         |
+| 2023-02-13     | Kassandra Svoboda |
+| 2023-02-20     | Vincy Wilson      |
+| 2023-02-27     | Joanna Shih       |
+| 2023-03-06     | Ramya Authappan   |
+| 2023-03-13     | Chloe Liu         |
+| 2023-03-20     | Kassandra Svoboda |
+| 2023-03-27     | Vincy Wilson      |
+| 2023-04-03     | Joanna Shih       |
+| 2023-04-10     | Ramya Authappan   |
+| 2023-04-17     | Chloe Liu         |
+| 2023-04-24     | Kassandra Svoboda |
 
 [DRI]: /handbook/people-group/directly-responsible-individuals/
