Add new section to the Development training section

--- a/development/training/index.html.md.erb
+++ b/development/training/index.html.md.erb
@@ -65,6 +65,11 @@ These meetings are currently run on a **weekly** cadence, alternating between ti
 | +4:30 | [@ntepluhina](https://gitlab.com/ntepluhina) |
 | +16:30 | [@seanarnold](https://gitlab.com/seanarnold), [@cablett](https://gitlab.com/cablett) |
 
+### Engineering Management
+
+One of the paths for engineers to progress in their career is a Management path. To explain more about the role
+of Engineering Managers in GitLab, there is a series of conversations with team members explaining details of their work and their experience transitioning to management
+[here](/handbook/engineering/development/training/em-role/index.html).
 
 ## Edcast / GitLab Learn
 
