--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -17,7 +17,7 @@ For an overview of our overall approach to OKRs, as well as any company-wide OKR
 
 ### General timeline and process 
 
-_Please note: Image not up-to-date and will be updated for FY23 Q1 onward._
+**_Please note: Image not up-to-date and will be updated for FY23 Q1 onward._**
 
 ![General timeline and process ](/images/handbook/product/okr-process.png)
 
@@ -27,18 +27,27 @@ This page provides an overview of the Product Division OKR workflow. All departm
 
 ## Timeline and process for every quarter
 
-### OKR Kick-off by VP of product
+### OKR Kick-off by Chief Product Officer
 
-- **8 weeks** prior to the start of the fiscal quarter, the VP, Product begins drafting OKRs aligned to the [annual product investment themes](https://about.gitlab.com/direction/#fy23-product-investment-themes) and any other business considerations. The VP Product will be assigned [this auto issue template](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Product-Division-OKR-Drafting.md) to create and share drafts with the Product Leadership Team.  
-- **6 weeks** prior to the start of the fiscal quarter:
-     - Product Leadership Team completes providing all their feedback and alternate OKRs in the draft issue
-     - VP, UX provides  OKR proposals from the UX perspective, tagging VP, Product and Product Operations in the draft issue
-- **5 weeks** prior to the start of the fiscal quarter, the CEO and Chief of Staff to the CEO initiate the OKR process. The CEO will share an MR in the #e-group Slack channel with the 3 Company Objectives for the quarter, and one to three Key Results for each objective. 
-- **4 weeks** prior to the start to fiscal quarter:
-     - VP, Product aligns Product Division OKRs with CEO OKRs as needed and gets CEO approval
-     - Product Operations creates epics/issues for finalized OKRs in GitLab 
-- **3 weeks** prior to start of fiscal quarter,  Product Operations informs all Group Product Managers to review and activate their  Product Managers and [Product Groups and/or Quads](https://about.gitlab.com/handbook/product/product-processes/#quad--infra--security-product-group-dris) to draft their OKRs
-- **1 week** prior to fiscal quarter start, Product Operations reviews and ensures all OKRs have been drafted and linked as needed in GitLab
+- **8 weeks** prior to the start of the  quarter, an [automated drafting issue](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Product-Division-OKR-Drafting.md) kicks off the OKR drafting process: 
+     - Product Operations updates the issue with known Objectives, due dates and any other details needed
+     - Product Operations signals the Chief Product Officer and the team the drafting issue is available 
+- **6 weeks** prior to the start of the quarter: 
+     - CEO and Chief of Staff to the CEO initiate the OKR process. See [CEO initiates new quarter's OKRs](https://about.gitlab.com/company/okrs/#ceo-initiates-new-quarters-okrs)
+     - CProdO shares proposed Product Division OKRs aligned to the [annual product investment themes](https://about.gitlab.com/direction/#fy23-product-investment-themes) and annual CEO Objectives leveraging the [drafting issue](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Product-Division-OKR-Drafting.md) and pings the Product Leadership Team for review and feedback
+     - Product Leadership team  provides  their feedback or any alternate OKRs in the drafting issue
+     - VP, UX provides OKR proposals from the UX perspective, in the drafting issue
+     - Product Operations tags Product Management, CoS to CTO/Engineering and any other cross-funcitional leaders necessary to review/consider for shared OKRs
+- **5 weeks** prior to the start of the quarter:
+     - Initial draft of CEO OKRs is shared with E-Group in the E-Group Weekly. 
+     - CProdO aligns Product Division OKRs with CEO OKRs if needed and gets CEO approval as needed
+     - CProdO discusses any joint Product-Engineering OKRs with CTO as needed
+- **4 weeks** prior to the start to quarter:
+     - CProdO updates and finalizes Product Division OKRs in the drafting issue 
+     - Product Operations creates high level OKRs in GitLab and tags in Product Managers to finalize KR drafts with their [Product Grooup/Quad](https://about.gitlab.com/handbook/product/product-processes/#quad--infra--security-product-group-dris)
+     - Product Operations tags CoS to CTO/Engineering to finalize committments to shared OKRs
+- **3 weeks** prior to start of fiscal quarter, Product Operations  asks Product Leadership to review all their  Product Managers' OKRs and finalize their teams' OKR committments 
+- **1 week** prior to quarter start, Product Operations reviews and ensures all OKRs have been drafted and added in GitLab
 - **1 week** after quarter start: 
    - Product Operations reminds all Product update previous quarter scores and close their OKR issues
    - Product Operations asks  Directors, and Group Product Managers to run [OKR retrospectives](https://gitlab.com/gitlab-com/Product/-/issues/new?issuable_template=OKR-Retrospective) for their teams for the previous quarter. 
