--- a/development/index.html.md.erb
+++ b/development/index.html.md.erb
@@ -213,10 +213,14 @@ The company-wide Talent Assessment timeline can be found [here](https://about.gi
 
 The SSOT timeline for the upcoming Annual Compensation Review can be found [here](https://about.gitlab.com/handbook/total-rewards/compensation/compensation-review-cycle/#january). Below you will find additional dates specific to the Development department to ensure all levels have time to review as we move through the process.
 
+Phase 1 (cash only):
 - January 9-13 @5pm PT - Manager level finalizes comp recommendations
 - January 16-17 @5pm PT - Sr Mgr (or next level; Director in some cases) finalize comp recommendations
 - January 18-19 @5pm PT - VP, Development direct reports (Dir/Sr Dir) finalize comp recommendations
 - January 20-23 @ 5pm PT - VP/PBP finalize comp recommendations
+
+Phase 2 (equity only):
+- February TBD
 
 
 ### How we hire contractors
