Correct exchange rate section.

--- a/total-rewards/compensation/index.html.md.erb
+++ b/total-rewards/compensation/index.html.md.erb
@@ -211,7 +211,7 @@ Team members contracted through a PEO or IT BV may have the option to choose to 
 
 #### Exchange Rates for Bonus Processing
 
-All [one-time bonuses](https://about.gitlab.com/handbook/incentives/) including Discretionary, Retention, Referral, and Working Group Bonuses where the intended value is awarded in USD will be converted to local currency using the exchange rate effective the first of the month in which the bonus is awarded.
+All [one-time bonuses](https://about.gitlab.com/handbook/incentives/) including Discretionary, Referral, and Working Group Bonuses where the intended value is awarded in USD will be converted to local currency using the exchange rate effective the first of the month in which the bonus is awarded.
 
 ### Not paid in your local currency
 
