Moving Stable Counterparts between stages process

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -1555,6 +1555,17 @@ Once the first PM or EM is hired, a new Group for the Stage should be formed:
 
 As the rest of the EM/PM's are hired, they take over that role for the new Group.
 
+### Moving Stable Counterparts between stages
+
+At times it may be necessary to transfer a [stable-counterpart](https://about.gitlab.com/handbook/leadership/#stable-counterparts) from one team to another.  In cases where this team member's previous role will be backfilled, follow the [Department Transfer Process](https://about.gitlab.com/handbook/people-group/promotions-transfers/#department-transfers).  In cases where the role will not be backfilled (i.e. the role was shifted from one team to another), the following steps should be taken to ensure leaders in the relevant stages are informed and can help guide their teams through the changes in team member allocation:
+
+1. Create an issue in a private project or a Google Doc with [limited access](https://about.gitlab.com/handbook/communication/confidentiality-levels/#limited-access) using the following [team-realignment issue template](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/team-realignment.md), which states the purpose of the reallocation and helps define a communication plan notifying teams affected, the leaders impacted, and the rest of the organization. Key details to cover:
+  1. List out _Who, what and why_
+  1. Identify DRIs for action items related to the team changes
+  1. Define a transparent communication plan to execute against and assign tasks, as part of the communication timeline
+1. Assign the issue to those who are DRIs or have tasks related to the realignment
+1. Once the issue has gotten approval from leadership and impacted parties have been made aware of the reallocation of team members, move the issue to a public repository (such as [Product](https://gitlab.com/gitlab-com/Product), [www-gitlab-com](https://gitlab.com/gitlab-com/www-gitlab-com), or a project specific to your team) in accordance with our [Transparency](https://about.gitlab.com/handbook/values/#transparency) value, making these changes transparent to all team members.
+
 ### Planning and Direction
 
 As a PM, you must plan for the near term milestones (more detailed) as well as for the long
