Add clarity to prioritization labeling

--- a/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -178,7 +178,7 @@ To encourage more transparency and collaboration amongst the team and additional
 
 #### Prioritization of issues
 
-The team makes use of `Verify::P*` labels to indicate priority order of issues in addition to a stack rank in many areas. Currently these labels are applied as follows.
+The team makes use of `Verify::P*` labels to indicate priority order of issues in addition to a stack rank in many areas. As part of milestone planning and review we may decide to change or remove the labels to reflect new priority for issues. Currently these labels are applied as follows.
 
 | Priority Label | Reason for applying |
 | ---- | ---- |
